--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.0",
     "redux-persist": "^6.0.0",
+    "@babel/plugin-proposal-private-property-in-object": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
